PLT-5740 - Fixing overlapping attachment icon

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -359,6 +359,10 @@
 }
 
 .post-create__container {
+    .custom-textarea {
+        overflow: hidden;
+    }
+
     form {
         margin: 0 auto;
         padding: .5em 15px 0;
@@ -376,6 +380,7 @@
             }
 
             .custom-textarea {
+                overflow: auto;
                 padding-right: 43px;
             }
         }
